--- a/packages/scrabble-solver/src/components/Well/Well.module.scss
+++ b/packages/scrabble-solver/src/components/Well/Well.module.scss
@@ -1,4 +1,5 @@
 .well {
+  position: relative;
   background: white;
   border: var(--border);
   box-shadow: var(--box-shadow);
